[package]
name = "todomvc"
version = "0.0.1"
edition = "2021"
authors = ["Ammar Farhan Mohamad Rizam <ammar_22006911@utp.edu.my>"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.29"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
sqlb = "0.4.0"
sqlx = { version = "0.7.3", features = ["runtime-tokio-rustls", "postgres"] }
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["full"] }
warp = "0.3.6"
